Simplify stopping criteria related code and change to use protocols instead of abstract classes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,24 @@
     ],
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": true,
-    "python.envFile": "${workspaceFolder}/.env"
+    "python.analysis.autoImportCompletions": true,
+    "editor.detectIndentation": false,
+    "editor.tabSize": 4,
+    "python.envFile": "${workspaceFolder}/.env",
+    "pylint.importStrategy": "fromEnvironment",
+    "pylint.args": ["--rcfile=${workspaceFolder}/.pylintrc"],
+    "mypy-type-checker.importStrategy": "fromEnvironment",
+    "isort.args": [
+        "--profile", "black"
+    ],
+    "isort.importStrategy": "fromEnvironment",
+    "black-formatter.importStrategy": "fromEnvironment",
+    "black-formatter.args":  ["--line-length", "100"],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        },
+    }
 }
