--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "deformation-inversion-layer"
-version = "1.1.0"
+version = "1.1.1"
 authors = [
   { name="Joel Honkamaa" },
 ]
 description = "Deformation inversion layer is a neural network layer for inverting deformation fields"
 readme = "description.md"
-requires-python = ">=3.6"
+requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -29,3 +29,9 @@ license = {file = "LICENSE"}
 
 [project.urls]
 "Homepage" = "https://github.com/honkamj/deformation-inversion-layer"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+"deformation_inversion_layer" = ["py.typed"]
